[package]
name = "lasagna"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lasagna-derive"]

[dependencies]
dashmap = "5.1"
lasagna-derive = { path = "lasagna-derive" }
lazy_static = "^1.4"
regex = "^1.5"
